codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_local_background_server.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

  >_ OpenAI Codex (v0.0.0)

  Visit https://chatgpt.com/codex/settings/usage for up-to-date
  information on rate limits and credits

  Server:          Local background server

  Model:           gpt-5.1-codex-max (reasoning medium, summaries auto)
  Directory:       [[workspace]]
  Permissions:     Custom (workspace with network access, Ask for approval)
  Agents.md:       <none>

Adaptive Effort
  Enabled: yes
  Preference: Astra
  Current: Sol High
  Budget mode: Surplus
  Complexity: Complex
  Implementation phase: Mechanical validation
  Implementation floor: Luna High
  Attempt: 2
  Failure pressure: 0/2
  Unfinished pressure: 0/2
  Paused: no
  Last outcome: None
  Last failure: None
  Worker role: Implementation
  Worker scope: bounded status integration
  Worker binding: Bound
  Workflow terminal: READY_FOR_VALIDATION

  Token usage:     750 total  (500 input + 250 output)
  Context window:  100% left (750 used / 272K)
  Limits:          data not available yet
